--- a/tests/test_cases/2025/command_support.yaml
+++ b/tests/test_cases/2025/command_support.yaml
@@ -53,3 +53,14 @@ supported_commands_by_ecu:
   - 019E:EXH_RATE
   - 019F:FUELSYSA_B1,FUELSYSA_B1_SUP,FUELSYSA_B2,FUELSYSA_B2_SUP,FUELSYSA_B3,FUELSYSA_B3_SUP,FUELSYSA_B4,FUELSYSA_B4_SUP,FUELSYSB_B1,FUELSYSB_B1_SUP,FUELSYSB_B2,FUELSYSB_B2_SUP,FUELSYSB_B3,FUELSYSB_B3_SUP,FUELSYSB_B4,FUELSYSB_B4_SUP
   - 01A6:ODO
+unsupported_commands_by_ecu:
+  DA0E:
+  - DA0E.222610
+  - DA0E.222611
+  - DA0E.22266D
+  DA10:
+  - DA10.222660
+  DA1D:
+  - DA1D.222221
+  DB33:
+  - DB33.223086
