Update observed commands

--- a/tests/test_cases/2018/command_support.yaml
+++ b/tests/test_cases/2018/command_support.yaml
@@ -1,5 +1,5 @@
 model_year: 2018
-can_id_format: ELEVEN_BIT
+can_id_format: TWENTY_NINE_BIT
 extended_addressing_enabled: false
 supported_commands_by_ecu:
   DB33:
