--- a/tests/test_cases/2017/command_support.yaml
+++ b/tests/test_cases/2017/command_support.yaml
@@ -1,5 +1,5 @@
 model_year: 2017
-can_id_format: ELEVEN_BIT
+can_id_format: TWENTY_NINE_BIT
 extended_addressing_enabled: false
 supported_commands_by_ecu:
   DB33:
@@ -48,11 +48,7 @@ supported_commands_by_ecu:
   - 019F:FUELSYSA_B1,FUELSYSA_B1_SUP,FUELSYSA_B2,FUELSYSA_B2_SUP,FUELSYSA_B3,FUELSYSA_B3_SUP,FUELSYSA_B4,FUELSYSA_B4_SUP,FUELSYSB_B1,FUELSYSB_B1_SUP,FUELSYSB_B2,FUELSYSB_B2_SUP,FUELSYSB_B3,FUELSYSB_B3_SUP,FUELSYSB_B4,FUELSYSB_B4_SUP
 unsupported_commands_by_ecu:
   DA0E:
-  - DA0E.222610
-  - DA0E.222611
   - DA0E.222612
-  - DA0E.222662
-  - DA0E.22266D
   DA10:
   - DA10.222660
   DA1D:
@@ -61,12 +57,7 @@ unsupported_commands_by_ecu:
   - DA26.226001
   DA60:
   - DA60.227028
-  - DA60.227029
   DB33:
-  - DB33.0105
-  - DB33.010D
-  - DB33.0131
-  - DB33.0142
-  - DB33.222615
-  - DB33.223083
+  - DB33.18DAF110.222600
+  - DB33.18DAF110.223000
   - DB33.223086
