--- a/tests/test_cases/2017/commands/DB33.010D.yaml
+++ b/tests/test_cases/2017/commands/DB33.010D.yaml
@@ -5,6 +5,12 @@ test_cases:
 - response: 18DAF10E03410D00
   expected_values:
     VSS: 0
+- response: 18DAF10E03410D02
+  expected_values:
+    VSS: 2
+- response: 18DAF10E03410D05
+  expected_values:
+    VSS: 5
 - response: 18DAF10E03410D07
   expected_values:
     VSS: 7
@@ -17,12 +23,30 @@ test_cases:
 - response: 18DAF10E03410D0B
   expected_values:
     VSS: 11
+- response: 18DAF10E03410D0C
+  expected_values:
+    VSS: 12
+- response: 18DAF10E03410D0E
+  expected_values:
+    VSS: 14
+- response: 18DAF10E03410D0F
+  expected_values:
+    VSS: 15
+- response: 18DAF10E03410D10
+  expected_values:
+    VSS: 16
+- response: 18DAF10E03410D11
+  expected_values:
+    VSS: 17
 - response: 18DAF10E03410D12
   expected_values:
     VSS: 18
 - response: 18DAF10E03410D13
   expected_values:
     VSS: 19
+- response: 18DAF10E03410D14
+  expected_values:
+    VSS: 20
 - response: 18DAF10E03410D15
   expected_values:
     VSS: 21
@@ -32,6 +56,9 @@ test_cases:
 - response: 18DAF10E03410D18
   expected_values:
     VSS: 24
+- response: 18DAF10E03410D1A
+  expected_values:
+    VSS: 26
 - response: 18DAF10E03410D1C
   expected_values:
     VSS: 28
@@ -41,24 +68,45 @@ test_cases:
 - response: 18DAF10E03410D1E
   expected_values:
     VSS: 30
+- response: 18DAF10E03410D1F
+  expected_values:
+    VSS: 31
 - response: 18DAF10E03410D20
   expected_values:
     VSS: 32
 - response: 18DAF10E03410D21
   expected_values:
     VSS: 33
+- response: 18DAF10E03410D22
+  expected_values:
+    VSS: 34
+- response: 18DAF10E03410D24
+  expected_values:
+    VSS: 36
 - response: 18DAF10E03410D25
   expected_values:
     VSS: 37
 - response: 18DAF10E03410D26
   expected_values:
     VSS: 38
+- response: 18DAF10E03410D28
+  expected_values:
+    VSS: 40
+- response: 18DAF10E03410D29
+  expected_values:
+    VSS: 41
 - response: 18DAF10E03410D2A
   expected_values:
     VSS: 42
+- response: 18DAF10E03410D2B
+  expected_values:
+    VSS: 43
 - response: 18DAF10E03410D2C
   expected_values:
     VSS: 44
+- response: 18DAF10E03410D2D
+  expected_values:
+    VSS: 45
 - response: 18DAF10E03410D2E
   expected_values:
     VSS: 46
@@ -77,9 +125,15 @@ test_cases:
 - response: 18DAF10E03410D33
   expected_values:
     VSS: 51
+- response: 18DAF10E03410D34
+  expected_values:
+    VSS: 52
 - response: 18DAF10E03410D35
   expected_values:
     VSS: 53
+- response: 18DAF10E03410D36
+  expected_values:
+    VSS: 54
 - response: 18DAF10E03410D37
   expected_values:
     VSS: 55
@@ -95,6 +149,9 @@ test_cases:
 - response: 18DAF10E03410D3B
   expected_values:
     VSS: 59
+- response: 18DAF10E03410D3C
+  expected_values:
+    VSS: 60
 - response: 18DAF10E03410D3D
   expected_values:
     VSS: 61
@@ -161,6 +218,12 @@ test_cases:
 - response: 18DAF10E03410D52
   expected_values:
     VSS: 82
+- response: 18DAF10E03410D53
+  expected_values:
+    VSS: 83
+- response: 18DAF10E03410D54
+  expected_values:
+    VSS: 84
 - response: 18DAF10E03410D55
   expected_values:
     VSS: 85
@@ -194,6 +257,9 @@ test_cases:
 - response: 18DAF10E03410D5F
   expected_values:
     VSS: 95
+- response: 18DAF10E03410D60
+  expected_values:
+    VSS: 96
 - response: 18DAF10E03410D61
   expected_values:
     VSS: 97
@@ -212,6 +278,9 @@ test_cases:
 - response: 18DAF10E03410D68
   expected_values:
     VSS: 104
+- response: 18DAF10E03410D69
+  expected_values:
+    VSS: 105
 - response: 18DAF10E03410D6A
   expected_values:
     VSS: 106
@@ -224,12 +293,30 @@ test_cases:
 - response: 18DAF10E03410D6D
   expected_values:
     VSS: 109
+- response: 18DAF10E03410D6E
+  expected_values:
+    VSS: 110
 - response: 18DAF10E03410D6F
   expected_values:
     VSS: 111
+- response: 18DAF10E03410D70
+  expected_values:
+    VSS: 112
+- response: 18DAF10E03410D71
+  expected_values:
+    VSS: 113
 - response: 18DAF10E03410D73
   expected_values:
     VSS: 115
+- response: 18DAF10E03410D75
+  expected_values:
+    VSS: 117
+- response: 18DAF10E03410D77
+  expected_values:
+    VSS: 119
+- response: 18DAF10E03410D7B
+  expected_values:
+    VSS: 123
 - response: 18DAF11003410D00
   expected_values:
     VSS: 0
@@ -250,6 +337,9 @@ test_cases:
 - response: 18DAF11003410D04
   expected_values:
     VSS: 4
+- response: 18DAF11003410D05
+  expected_values:
+    VSS: 5
 - response: 18DAF11003410D06
   expected_values:
     VSS: 6
@@ -283,12 +373,18 @@ test_cases:
 - response: 18DAF11003410D10
   expected_values:
     VSS: 16
+- response: 18DAF11003410D11
+  expected_values:
+    VSS: 17
 - response: 18DAF11003410D12
   expected_values:
     VSS: 18
 - response: 18DAF11003410D13
   expected_values:
     VSS: 19
+- response: 18DAF11003410D14
+  expected_values:
+    VSS: 20
 - response: 18DAF11003410D15
   expected_values:
     VSS: 21
@@ -326,10 +422,21 @@ test_cases:
 - response: 18DAF11003410D1F
   expected_values:
     VSS: 31
+- response: 18DAF11003410D21
+  expected_values:
+    VSS: 33
+- response: 18DAF11003410D23
+  expected_values:
+    VSS: 35
 - response: 18DAF11003410D25
   expected_values:
     VSS: 37
 - response: 18DAF11003410D26
+  expected_values:
+    VSS: 38
+- response: |-
+    18DAF11003410D26
+    18DAF11E03410D26
   expected_values:
     VSS: 38
 - response: 18DAF11003410D27
@@ -350,24 +457,45 @@ test_cases:
 - response: 18DAF11003410D2D
   expected_values:
     VSS: 45
+- response: 18DAF11003410D2E
+  expected_values:
+    VSS: 46
+- response: 18DAF11003410D30
+  expected_values:
+    VSS: 48
 - response: 18DAF11003410D31
   expected_values:
     VSS: 49
+- response: 18DAF11003410D32
+  expected_values:
+    VSS: 50
+- response: 18DAF11003410D33
+  expected_values:
+    VSS: 51
 - response: 18DAF11003410D34
   expected_values:
     VSS: 52
 - response: 18DAF11003410D35
   expected_values:
     VSS: 53
+- response: 18DAF11003410D37
+  expected_values:
+    VSS: 55
 - response: 18DAF11003410D38
   expected_values:
     VSS: 56
 - response: 18DAF11003410D39
   expected_values:
     VSS: 57
+- response: 18DAF11003410D3A
+  expected_values:
+    VSS: 58
 - response: 18DAF11003410D3C
   expected_values:
     VSS: 60
+- response: 18DAF11003410D3D
+  expected_values:
+    VSS: 61
 - response: 18DAF11003410D3E
   expected_values:
     VSS: 62
@@ -383,9 +511,17 @@ test_cases:
 - response: 18DAF11003410D42
   expected_values:
     VSS: 66
+- response: |-
+    18DAF11003410D42
+    18DAF11E03410D42
+  expected_values:
+    VSS: 66
 - response: 18DAF11003410D43
   expected_values:
     VSS: 67
+- response: 18DAF11003410D45
+  expected_values:
+    VSS: 69
 - response: 18DAF11003410D46
   expected_values:
     VSS: 70
@@ -393,25 +529,80 @@ test_cases:
   expected_values:
     VSS: 71
 - response: |-
+    18DAF11003410D48
+    18DAF11E03410D48
+  expected_values:
+    VSS: 72
+- response: 18DAF11003410D49
+  expected_values:
+    VSS: 73
+- response: |-
     18DAF11003410D49
     18DAF11E03410D49
   expected_values:
     VSS: 73
+- response: 18DAF11003410D4A
+  expected_values:
+    VSS: 74
+- response: 18DAF11003410D4B
+  expected_values:
+    VSS: 75
+- response: 18DAF11003410D4C
+  expected_values:
+    VSS: 76
+- response: 18DAF11003410D4E
+  expected_values:
+    VSS: 78
+- response: |-
+    18DAF11003410D4E
+    18DAF11E03410D4E
+  expected_values:
+    VSS: 78
+- response: 18DAF11003410D4F
+  expected_values:
+    VSS: 79
 - response: 18DAF11003410D51
   expected_values:
     VSS: 81
 - response: 18DAF11003410D52
   expected_values:
     VSS: 82
+- response: 18DAF11003410D54
+  expected_values:
+    VSS: 84
+- response: 18DAF11003410D56
+  expected_values:
+    VSS: 86
+- response: 18DAF11003410D57
+  expected_values:
+    VSS: 87
+- response: 18DAF11003410D58
+  expected_values:
+    VSS: 88
+- response: 18DAF11003410D5B
+  expected_values:
+    VSS: 91
+- response: 18DAF11003410D5C
+  expected_values:
+    VSS: 92
 - response: 18DAF11003410D5D
   expected_values:
     VSS: 93
+- response: 18DAF11003410D5E
+  expected_values:
+    VSS: 94
 - response: 18DAF11003410D5F
   expected_values:
     VSS: 95
 - response: 18DAF11003410D60
   expected_values:
     VSS: 96
+- response: 18DAF11003410D62
+  expected_values:
+    VSS: 98
+- response: 18DAF11003410D66
+  expected_values:
+    VSS: 102
 - response: 18DAF11003410D68
   expected_values:
     VSS: 104
@@ -424,15 +615,36 @@ test_cases:
 - response: 18DAF11003410D6B
   expected_values:
     VSS: 107
+- response: 18DAF11003410D6C
+  expected_values:
+    VSS: 108
+- response: 18DAF11003410D6D
+  expected_values:
+    VSS: 109
 - response: 18DAF11003410D6E
   expected_values:
     VSS: 110
+- response: 18DAF11003410D6F
+  expected_values:
+    VSS: 111
 - response: 18DAF11003410D70
   expected_values:
     VSS: 112
+- response: 18DAF11003410D71
+  expected_values:
+    VSS: 113
+- response: 18DAF11003410D72
+  expected_values:
+    VSS: 114
+- response: 18DAF11003410D74
+  expected_values:
+    VSS: 116
 - response: 18DAF11003410D76
   expected_values:
     VSS: 118
+- response: 18DAF11003410D77
+  expected_values:
+    VSS: 119
 - response: 18DAF11003410D78
   expected_values:
     VSS: 120
@@ -456,6 +668,39 @@ test_cases:
 - response: 18DAF11003410D7D
   expected_values:
     VSS: 125
+- response: 18DAF11003410D7E
+  expected_values:
+    VSS: 126
 - response: 18DAF11003410D7F
   expected_values:
     VSS: 127
+- response: 18DAF11003410D80
+  expected_values:
+    VSS: 128
+- response: 18DAF11003410D81
+  expected_values:
+    VSS: 129
+- response: 18DAF11003410D82
+  expected_values:
+    VSS: 130
+- response: 18DAF11003410D83
+  expected_values:
+    VSS: 131
+- response: 18DAF11003410D84
+  expected_values:
+    VSS: 132
+- response: 18DAF11003410D85
+  expected_values:
+    VSS: 133
+- response: 18DAF11003410D86
+  expected_values:
+    VSS: 134
+- response: 18DAF11003410D88
+  expected_values:
+    VSS: 136
+- response: 18DAF11003410D89
+  expected_values:
+    VSS: 137
+- response: 18DAF11003410D8E
+  expected_values:
+    VSS: 142
