--- a/tests/test_cases/2017/commands/DB33.0131.yaml
+++ b/tests/test_cases/2017/commands/DB33.0131.yaml
@@ -257,11 +257,563 @@ test_cases:
 - response: 18DAF10E0441315402
   expected_values:
     CLR_DIST: 21506
+- response: 18DAF10E0441315524
+  expected_values:
+    CLR_DIST: 21796
+- response: 18DAF10E0441315525
+  expected_values:
+    CLR_DIST: 21797
+- response: 18DAF10E0441315526
+  expected_values:
+    CLR_DIST: 21798
+- response: 18DAF10E0441315527
+  expected_values:
+    CLR_DIST: 21799
+- response: 18DAF10E0441315528
+  expected_values:
+    CLR_DIST: 21800
+- response: 18DAF10E0441315529
+  expected_values:
+    CLR_DIST: 21801
+- response: 18DAF10E044131552A
+  expected_values:
+    CLR_DIST: 21802
+- response: 18DAF10E044131552C
+  expected_values:
+    CLR_DIST: 21804
+- response: 18DAF10E044131552D
+  expected_values:
+    CLR_DIST: 21805
+- response: 18DAF10E044131552E
+  expected_values:
+    CLR_DIST: 21806
+- response: 18DAF10E044131552F
+  expected_values:
+    CLR_DIST: 21807
+- response: 18DAF10E0441315530
+  expected_values:
+    CLR_DIST: 21808
+- response: 18DAF10E0441315531
+  expected_values:
+    CLR_DIST: 21809
+- response: 18DAF10E0441315532
+  expected_values:
+    CLR_DIST: 21810
+- response: 18DAF10E0441315534
+  expected_values:
+    CLR_DIST: 21812
+- response: 18DAF10E0441315535
+  expected_values:
+    CLR_DIST: 21813
+- response: 18DAF10E0441315536
+  expected_values:
+    CLR_DIST: 21814
+- response: 18DAF10E0441315537
+  expected_values:
+    CLR_DIST: 21815
+- response: 18DAF10E0441315538
+  expected_values:
+    CLR_DIST: 21816
+- response: 18DAF10E0441315539
+  expected_values:
+    CLR_DIST: 21817
+- response: 18DAF10E044131553A
+  expected_values:
+    CLR_DIST: 21818
+- response: 18DAF10E044131553B
+  expected_values:
+    CLR_DIST: 21819
+- response: 18DAF10E044131553C
+  expected_values:
+    CLR_DIST: 21820
+- response: 18DAF10E044131553D
+  expected_values:
+    CLR_DIST: 21821
+- response: 18DAF10E044131553E
+  expected_values:
+    CLR_DIST: 21822
+- response: 18DAF10E044131553F
+  expected_values:
+    CLR_DIST: 21823
+- response: 18DAF10E0441315540
+  expected_values:
+    CLR_DIST: 21824
+- response: 18DAF10E0441315541
+  expected_values:
+    CLR_DIST: 21825
+- response: 18DAF10E0441315542
+  expected_values:
+    CLR_DIST: 21826
+- response: 18DAF10E0441315543
+  expected_values:
+    CLR_DIST: 21827
+- response: 18DAF10E0441315544
+  expected_values:
+    CLR_DIST: 21828
+- response: 18DAF10E0441315545
+  expected_values:
+    CLR_DIST: 21829
+- response: 18DAF10E0441315546
+  expected_values:
+    CLR_DIST: 21830
+- response: 18DAF10E0441315547
+  expected_values:
+    CLR_DIST: 21831
+- response: 18DAF10E0441315548
+  expected_values:
+    CLR_DIST: 21832
+- response: 18DAF10E0441315549
+  expected_values:
+    CLR_DIST: 21833
+- response: 18DAF10E044131554A
+  expected_values:
+    CLR_DIST: 21834
+- response: 18DAF10E044131554B
+  expected_values:
+    CLR_DIST: 21835
+- response: 18DAF10E044131554C
+  expected_values:
+    CLR_DIST: 21836
+- response: 18DAF10E044131554D
+  expected_values:
+    CLR_DIST: 21837
+- response: 18DAF10E044131554E
+  expected_values:
+    CLR_DIST: 21838
+- response: 18DAF10E044131554F
+  expected_values:
+    CLR_DIST: 21839
+- response: 18DAF10E0441315550
+  expected_values:
+    CLR_DIST: 21840
+- response: 18DAF10E0441315551
+  expected_values:
+    CLR_DIST: 21841
+- response: 18DAF10E0441315552
+  expected_values:
+    CLR_DIST: 21842
+- response: 18DAF10E0441315553
+  expected_values:
+    CLR_DIST: 21843
+- response: 18DAF10E0441315554
+  expected_values:
+    CLR_DIST: 21844
+- response: 18DAF10E0441315555
+  expected_values:
+    CLR_DIST: 21845
+- response: 18DAF10E0441315556
+  expected_values:
+    CLR_DIST: 21846
+- response: 18DAF10E0441315557
+  expected_values:
+    CLR_DIST: 21847
+- response: 18DAF10E0441315558
+  expected_values:
+    CLR_DIST: 21848
+- response: 18DAF10E0441315559
+  expected_values:
+    CLR_DIST: 21849
+- response: 18DAF10E044131555A
+  expected_values:
+    CLR_DIST: 21850
+- response: 18DAF10E044131555B
+  expected_values:
+    CLR_DIST: 21851
+- response: 18DAF10E044131555C
+  expected_values:
+    CLR_DIST: 21852
+- response: 18DAF10E044131555D
+  expected_values:
+    CLR_DIST: 21853
+- response: 18DAF10E044131555E
+  expected_values:
+    CLR_DIST: 21854
+- response: 18DAF10E044131555F
+  expected_values:
+    CLR_DIST: 21855
+- response: 18DAF10E0441315560
+  expected_values:
+    CLR_DIST: 21856
+- response: 18DAF10E0441315561
+  expected_values:
+    CLR_DIST: 21857
+- response: 18DAF10E0441315562
+  expected_values:
+    CLR_DIST: 21858
+- response: 18DAF10E0441315563
+  expected_values:
+    CLR_DIST: 21859
+- response: 18DAF10E0441315564
+  expected_values:
+    CLR_DIST: 21860
+- response: 18DAF10E0441315565
+  expected_values:
+    CLR_DIST: 21861
+- response: 18DAF10E0441315566
+  expected_values:
+    CLR_DIST: 21862
+- response: 18DAF10E0441315567
+  expected_values:
+    CLR_DIST: 21863
+- response: 18DAF10E0441315568
+  expected_values:
+    CLR_DIST: 21864
+- response: 18DAF10E0441315569
+  expected_values:
+    CLR_DIST: 21865
+- response: 18DAF10E044131556A
+  expected_values:
+    CLR_DIST: 21866
+- response: 18DAF10E044131556B
+  expected_values:
+    CLR_DIST: 21867
+- response: 18DAF10E044131556C
+  expected_values:
+    CLR_DIST: 21868
+- response: 18DAF10E044131556D
+  expected_values:
+    CLR_DIST: 21869
+- response: 18DAF10E044131556E
+  expected_values:
+    CLR_DIST: 21870
+- response: 18DAF10E044131556F
+  expected_values:
+    CLR_DIST: 21871
+- response: 18DAF10E0441315570
+  expected_values:
+    CLR_DIST: 21872
+- response: 18DAF10E0441315571
+  expected_values:
+    CLR_DIST: 21873
+- response: 18DAF10E0441315572
+  expected_values:
+    CLR_DIST: 21874
+- response: 18DAF10E0441315573
+  expected_values:
+    CLR_DIST: 21875
+- response: 18DAF10E0441315574
+  expected_values:
+    CLR_DIST: 21876
+- response: 18DAF10E0441315575
+  expected_values:
+    CLR_DIST: 21877
+- response: 18DAF10E0441315576
+  expected_values:
+    CLR_DIST: 21878
+- response: 18DAF10E0441315577
+  expected_values:
+    CLR_DIST: 21879
+- response: 18DAF10E0441315578
+  expected_values:
+    CLR_DIST: 21880
+- response: 18DAF10E0441315579
+  expected_values:
+    CLR_DIST: 21881
+- response: 18DAF10E044131557B
+  expected_values:
+    CLR_DIST: 21883
+- response: 18DAF10E044131557C
+  expected_values:
+    CLR_DIST: 21884
+- response: 18DAF10E044131557D
+  expected_values:
+    CLR_DIST: 21885
+- response: 18DAF10E044131557E
+  expected_values:
+    CLR_DIST: 21886
+- response: 18DAF10E044131557F
+  expected_values:
+    CLR_DIST: 21887
+- response: 18DAF10E0441315580
+  expected_values:
+    CLR_DIST: 21888
+- response: 18DAF10E0441315581
+  expected_values:
+    CLR_DIST: 21889
+- response: 18DAF10E0441315582
+  expected_values:
+    CLR_DIST: 21890
+- response: 18DAF10E0441315583
+  expected_values:
+    CLR_DIST: 21891
+- response: 18DAF10E0441315584
+  expected_values:
+    CLR_DIST: 21892
+- response: 18DAF10E0441315593
+  expected_values:
+    CLR_DIST: 21907
+- response: 18DAF10E04413155A6
+  expected_values:
+    CLR_DIST: 21926
+- response: 18DAF10E04413155A7
+  expected_values:
+    CLR_DIST: 21927
+- response: 18DAF10E04413155A8
+  expected_values:
+    CLR_DIST: 21928
+- response: 18DAF10E04413155A9
+  expected_values:
+    CLR_DIST: 21929
+- response: 18DAF10E04413155AA
+  expected_values:
+    CLR_DIST: 21930
+- response: 18DAF10E04413155AB
+  expected_values:
+    CLR_DIST: 21931
+- response: 18DAF10E04413155AC
+  expected_values:
+    CLR_DIST: 21932
+- response: 18DAF10E04413155AD
+  expected_values:
+    CLR_DIST: 21933
+- response: 18DAF10E04413155AE
+  expected_values:
+    CLR_DIST: 21934
+- response: 18DAF10E04413155AF
+  expected_values:
+    CLR_DIST: 21935
+- response: 18DAF10E04413155B0
+  expected_values:
+    CLR_DIST: 21936
+- response: |-
+    18DAF1100441310000
+    18DAF11E0441310000
+  expected_values:
+    CLR_DIST: 0
+- response: 18DAF1100441310002
+  expected_values:
+    CLR_DIST: 2
+- response: 18DAF1100441310003
+  expected_values:
+    CLR_DIST: 3
+- response: 18DAF1100441310004
+  expected_values:
+    CLR_DIST: 4
+- response: 18DAF1100441310007
+  expected_values:
+    CLR_DIST: 7
+- response: 18DAF1100441310008
+  expected_values:
+    CLR_DIST: 8
+- response: 18DAF1100441310009
+  expected_values:
+    CLR_DIST: 9
+- response: 18DAF110044131000A
+  expected_values:
+    CLR_DIST: 10
+- response: 18DAF110044131000B
+  expected_values:
+    CLR_DIST: 11
+- response: 18DAF110044131000C
+  expected_values:
+    CLR_DIST: 12
+- response: 18DAF110044131000D
+  expected_values:
+    CLR_DIST: 13
+- response: 18DAF110044131000E
+  expected_values:
+    CLR_DIST: 14
+- response: 18DAF1100441310010
+  expected_values:
+    CLR_DIST: 16
+- response: 18DAF1100441310012
+  expected_values:
+    CLR_DIST: 18
+- response: 18DAF1100441310013
+  expected_values:
+    CLR_DIST: 19
+- response: 18DAF1100441310014
+  expected_values:
+    CLR_DIST: 20
+- response: 18DAF1100441310015
+  expected_values:
+    CLR_DIST: 21
+- response: 18DAF1100441310016
+  expected_values:
+    CLR_DIST: 22
+- response: 18DAF1100441310017
+  expected_values:
+    CLR_DIST: 23
+- response: 18DAF1100441310018
+  expected_values:
+    CLR_DIST: 24
+- response: 18DAF110044131001A
+  expected_values:
+    CLR_DIST: 26
+- response: 18DAF110044131001B
+  expected_values:
+    CLR_DIST: 27
+- response: 18DAF110044131001C
+  expected_values:
+    CLR_DIST: 28
+- response: 18DAF110044131001E
+  expected_values:
+    CLR_DIST: 30
+- response: 18DAF110044131001F
+  expected_values:
+    CLR_DIST: 31
+- response: 18DAF1100441310021
+  expected_values:
+    CLR_DIST: 33
+- response: 18DAF1100441310022
+  expected_values:
+    CLR_DIST: 34
+- response: 18DAF1100441310023
+  expected_values:
+    CLR_DIST: 35
+- response: 18DAF1100441310024
+  expected_values:
+    CLR_DIST: 36
+- response: 18DAF1100441310026
+  expected_values:
+    CLR_DIST: 38
+- response: 18DAF1100441310027
+  expected_values:
+    CLR_DIST: 39
+- response: 18DAF1100441310028
+  expected_values:
+    CLR_DIST: 40
+- response: 18DAF110044131002A
+  expected_values:
+    CLR_DIST: 42
+- response: 18DAF110044131002B
+  expected_values:
+    CLR_DIST: 43
+- response: 18DAF110044131002D
+  expected_values:
+    CLR_DIST: 45
+- response: 18DAF110044131002E
+  expected_values:
+    CLR_DIST: 46
+- response: 18DAF110044131002F
+  expected_values:
+    CLR_DIST: 47
+- response: 18DAF1100441310030
+  expected_values:
+    CLR_DIST: 48
+- response: 18DAF1100441310032
+  expected_values:
+    CLR_DIST: 50
+- response: 18DAF1100441310034
+  expected_values:
+    CLR_DIST: 52
+- response: 18DAF1100441310035
+  expected_values:
+    CLR_DIST: 53
+- response: 18DAF1100441310036
+  expected_values:
+    CLR_DIST: 54
+- response: 18DAF1100441310037
+  expected_values:
+    CLR_DIST: 55
+- response: 18DAF1100441310039
+  expected_values:
+    CLR_DIST: 57
+- response: 18DAF110044131003B
+  expected_values:
+    CLR_DIST: 59
+- response: 18DAF110044131003C
+  expected_values:
+    CLR_DIST: 60
+- response: 18DAF110044131003D
+  expected_values:
+    CLR_DIST: 61
+- response: 18DAF110044131003F
+  expected_values:
+    CLR_DIST: 63
+- response: 18DAF1100441310041
+  expected_values:
+    CLR_DIST: 65
+- response: 18DAF1100441310042
+  expected_values:
+    CLR_DIST: 66
+- response: 18DAF1100441310043
+  expected_values:
+    CLR_DIST: 67
+- response: 18DAF1100441310044
+  expected_values:
+    CLR_DIST: 68
+- response: 18DAF1100441310046
+  expected_values:
+    CLR_DIST: 70
+- response: 18DAF1100441310047
+  expected_values:
+    CLR_DIST: 71
+- response: 18DAF1100441310048
+  expected_values:
+    CLR_DIST: 72
+- response: 18DAF110044131004A
+  expected_values:
+    CLR_DIST: 74
+- response: 18DAF110044131004B
+  expected_values:
+    CLR_DIST: 75
+- response: 18DAF110044131004C
+  expected_values:
+    CLR_DIST: 76
+- response: 18DAF110044131004D
+  expected_values:
+    CLR_DIST: 77
+- response: 18DAF110044131004F
+  expected_values:
+    CLR_DIST: 79
+- response: 18DAF1100441310050
+  expected_values:
+    CLR_DIST: 80
+- response: 18DAF1100441310051
+  expected_values:
+    CLR_DIST: 81
+- response: 18DAF1100441310052
+  expected_values:
+    CLR_DIST: 82
+- response: 18DAF1100441310053
+  expected_values:
+    CLR_DIST: 83
+- response: 18DAF1100441310054
+  expected_values:
+    CLR_DIST: 84
+- response: 18DAF1100441310055
+  expected_values:
+    CLR_DIST: 85
+- response: 18DAF1100441310057
+  expected_values:
+    CLR_DIST: 87
+- response: |-
+    18DAF1100441310057
+    18DAF11E0441310057
+  expected_values:
+    CLR_DIST: 87
+- response: 18DAF1100441310058
+  expected_values:
+    CLR_DIST: 88
+- response: 18DAF1100441310059
+  expected_values:
+    CLR_DIST: 89
+- response: |-
+    18DAF1100441310059
+    18DAF11E0441310059
+  expected_values:
+    CLR_DIST: 89
+- response: 18DAF110044131005A
+  expected_values:
+    CLR_DIST: 90
+- response: 18DAF110044131005B
+  expected_values:
+    CLR_DIST: 91
+- response: 18DAF110044131005C
+  expected_values:
+    CLR_DIST: 92
+- response: 18DAF110044131005D
+  expected_values:
+    CLR_DIST: 93
 - response: |-
     18DAF110044131005D
     18DAF11E044131005D
   expected_values:
     CLR_DIST: 93
+- response: 18DAF110044131005E
+  expected_values:
+    CLR_DIST: 94
 - response: 18DAF110044131005F
   expected_values:
     CLR_DIST: 95
@@ -271,6 +823,9 @@ test_cases:
 - response: 18DAF1100441310061
   expected_values:
     CLR_DIST: 97
+- response: 18DAF1100441310062
+  expected_values:
+    CLR_DIST: 98
 - response: 18DAF1100441310063
   expected_values:
     CLR_DIST: 99
@@ -396,6 +951,124 @@ test_cases:
     18DAF11E0441310088
   expected_values:
     CLR_DIST: 136
+- response: |-
+    18DAF1100441310100
+    18DAF11E0441310100
+  expected_values:
+    CLR_DIST: 256
+- response: 18DAF1100441310101
+  expected_values:
+    CLR_DIST: 257
+- response: 18DAF1100441310102
+  expected_values:
+    CLR_DIST: 258
+- response: 18DAF1100441310103
+  expected_values:
+    CLR_DIST: 259
+- response: 18DAF1100441310104
+  expected_values:
+    CLR_DIST: 260
+- response: 18DAF1100441310105
+  expected_values:
+    CLR_DIST: 261
+- response: 18DAF1100441310106
+  expected_values:
+    CLR_DIST: 262
+- response: 18DAF1100441310107
+  expected_values:
+    CLR_DIST: 263
+- response: 18DAF1100441310108
+  expected_values:
+    CLR_DIST: 264
+- response: 18DAF1100441310109
+  expected_values:
+    CLR_DIST: 265
+- response: 18DAF110044131010A
+  expected_values:
+    CLR_DIST: 266
+- response: 18DAF110044131010B
+  expected_values:
+    CLR_DIST: 267
+- response: 18DAF110044131010D
+  expected_values:
+    CLR_DIST: 269
+- response: 18DAF110044131010E
+  expected_values:
+    CLR_DIST: 270
+- response: 18DAF110044131010F
+  expected_values:
+    CLR_DIST: 271
+- response: 18DAF1100441310110
+  expected_values:
+    CLR_DIST: 272
+- response: |-
+    18DAF1100441310110
+    18DAF11E0441310110
+  expected_values:
+    CLR_DIST: 272
+- response: 18DAF1100441310111
+  expected_values:
+    CLR_DIST: 273
+- response: 18DAF1100441310112
+  expected_values:
+    CLR_DIST: 274
+- response: 18DAF1100441310113
+  expected_values:
+    CLR_DIST: 275
+- response: 18DAF1100441310114
+  expected_values:
+    CLR_DIST: 276
+- response: 18DAF1100441310115
+  expected_values:
+    CLR_DIST: 277
+- response: 18DAF1100441310116
+  expected_values:
+    CLR_DIST: 278
+- response: 18DAF1100441310117
+  expected_values:
+    CLR_DIST: 279
+- response: 18DAF1100441310118
+  expected_values:
+    CLR_DIST: 280
+- response: 18DAF1100441310119
+  expected_values:
+    CLR_DIST: 281
+- response: 18DAF110044131011A
+  expected_values:
+    CLR_DIST: 282
+- response: 18DAF110044131011B
+  expected_values:
+    CLR_DIST: 283
+- response: 18DAF110044131011C
+  expected_values:
+    CLR_DIST: 284
+- response: 18DAF110044131011D
+  expected_values:
+    CLR_DIST: 285
+- response: 18DAF110044131011E
+  expected_values:
+    CLR_DIST: 286
+- response: 18DAF110044131011F
+  expected_values:
+    CLR_DIST: 287
+- response: 18DAF1100441310121
+  expected_values:
+    CLR_DIST: 289
+- response: 18DAF1100441310122
+  expected_values:
+    CLR_DIST: 290
+- response: 18DAF1100441310123
+  expected_values:
+    CLR_DIST: 291
+- response: 18DAF1100441310125
+  expected_values:
+    CLR_DIST: 293
+- response: 18DAF1100441310126
+  expected_values:
+    CLR_DIST: 294
+- response: 18DAF1100441310127
+  expected_values:
+    CLR_DIST: 295
 - response: 18DAF1100441310297
   expected_values:
     CLR_DIST: 663
@@ -440,6 +1113,9 @@ test_cases:
 - response: 18DAF11004413102A5
   expected_values:
     CLR_DIST: 677
+- response: 18DAF11E0441310112
+  expected_values:
+    CLR_DIST: 274
 - response: 18DAF11E0441310296
   expected_values:
     CLR_DIST: 662
