--- a/tests/test_cases/2017/commands/DB33.223086.yaml
+++ b/tests/test_cases/2017/commands/DB33.223086.yaml
@@ -23,6 +23,15 @@ test_cases:
 - response: |-
     18DAF11E1027623086FFFFFF
     18DAF11E210301F401F401F4
+    18DAF11E220C29100E16FB01
+    18DAF11E230101010304F010
+    18DAF11E24F0100001000000
+    18DAF11E2500000000005555
+  expected_values:
+    HONDA_GEAR_V2: D3
+- response: |-
+    18DAF11E1027623086FFFFFF
+    18DAF11E210301F401F401F4
     18DAF11E220FFE0EEF195301
     18DAF11E230001010504F010
     18DAF11E24F0100000000000
@@ -49,13 +58,13 @@ test_cases:
     HONDA_GEAR_V2: D1
 - response: |-
     18DAF11E1027623086FFFFFF
-    18DAF11E210301F401F41012
-    18DAF11E2210040ED3193700
-    18DAF11E230001010807F010
-    18DAF11E24F0100000000000
+    18DAF11E210301F401F40B60
+    18DAF11E2201F401F4194C00
+    18DAF11E230100000000F080
+    18DAF11E24F0800100000000
     18DAF11E2500000000005555
   expected_values:
-    HONDA_GEAR_V2: D8
+    HONDA_GEAR_V2: P
 - response: |-
     18DAF11E1027623086FFFFFF
     18DAF11E210301F401F42134
@@ -67,19 +76,10 @@ test_cases:
     HONDA_GEAR_V2: D1
 - response: |-
     18DAF11E1027623086FFFFFF
-    18DAF11E210301F401F42580
-    18DAF11E2201F401F418F301
-    18DAF11E230101010101F010
+    18DAF11E210301F401F42134
+    18DAF11E2221341361164B01
+    18DAF11E230001010707F010
     18DAF11E24F0100000000000
-    18DAF11E2500000000005555
-  expected_values:
-    HONDA_GEAR_V2: D1
-- response: |-
-    18DAF11E1027623086FFFFFF
-    18DAF11E210301F40B231202
-    18DAF11E2211F30E6006B000
-    18DAF11E230001010708F010
-    18DAF11E24F0100002000000
     18DAF11E2500000000005555
   expected_values:
     HONDA_GEAR_V2: D7
@@ -94,6 +94,15 @@ test_cases:
     HONDA_GEAR_V2: D1
 - response: |-
     18DAF11E1027623086FFFFFF
+    18DAF11E210301F40B390D7A
+    18DAF11E2201F40F1216FF01
+    18DAF11E230101010102F010
+    18DAF11E24F0100000000000
+    18DAF11E2500000000005555
+  expected_values:
+    HONDA_GEAR_V2: D1
+- response: |-
+    18DAF11E1027623086FFFFFF
     18DAF11E210301F40B6F1204
     18DAF11E2211F5100B06C200
     18DAF11E230001010708F010
@@ -101,6 +110,15 @@ test_cases:
     18DAF11E2500000000005555
   expected_values:
     HONDA_GEAR_V2: D7
+- response: |-
+    18DAF11E1027623086FFFFFF
+    18DAF11E210301F412A5100E
+    18DAF11E2210000FD4176E00
+    18DAF11E230001010808F010
+    18DAF11E24F0100002000000
+    18DAF11E2500000000005555
+  expected_values:
+    HONDA_GEAR_V2: D8
 - response: |-
     18DAF11E1027623086FFFFFF
     18DAF11E210301F415410F6F
@@ -119,15 +137,6 @@ test_cases:
     18DAF11E2500000000005555
   expected_values:
     HONDA_GEAR_V2: D2
-- response: |-
-    18DAF11E1027623086FFFFFF
-    18DAF11E210301F4213401F4
-    18DAF11E222134137F150B01
-    18DAF11E230001010606F010
-    18DAF11E24F0100001000000
-    18DAF11E2500000000005555
-  expected_values:
-    HONDA_GEAR_V2: D6
 - response: |-
     18DAF11E1027623086FFFFFF
     18DAF11E210301F421342134
@@ -157,22 +166,13 @@ test_cases:
     HONDA_GEAR_V2: D4
 - response: |-
     18DAF11E1027623086FFFFFF
-    18DAF11E210309E701F401F4
-    18DAF11E2210030E5A193D01
-    18DAF11E230001010504F010
-    18DAF11E24F0100003000000
+    18DAF11E210309B009B009B0
+    18DAF11E2209B009B001F401
+    18DAF11E230100010101F010
+    18DAF11E24F0100000000000
     18DAF11E2500000000005555
   expected_values:
-    HONDA_GEAR_V2: D5
-- response: |-
-    18DAF11E1027623086FFFFFF
-    18DAF11E21030A410ACA01F4
-    18DAF11E2201F401F416FF01
-    18DAF11E230101010302F010
-    18DAF11E24F0100002000000
-    18DAF11E2500000000005555
-  expected_values:
-    HONDA_GEAR_V2: D3
+    HONDA_GEAR_V2: D1
 - response: |-
     18DAF11E1027623086FFFFFF
     18DAF11E21030AFF01F401F4
@@ -221,7 +221,7 @@ test_cases:
 - response: |-
     18DAF11E1027623086FFFFFF
     18DAF11E2103213401F42134
-    18DAF11E2221341101191F00
+    18DAF11E2221341100193400
     18DAF11E230001010909F010
     18DAF11E24F0100000000000
     18DAF11E2500000000005555
