--- a/tests/test_cases/2023/command_support.yaml
+++ b/tests/test_cases/2023/command_support.yaml
@@ -1,4 +1,4 @@
-model_year: 2025
+model_year: 2023
 supported_commands_by_ecu:
   "DA10":
   - DA10.10.222610:HONDA_AC_CLUTCH,HONDA_GENERATOR
@@ -65,20 +65,87 @@ supported_commands_by_ecu:
   - 019F:FUELSYSA_B1,FUELSYSA_B1_SUP,FUELSYSA_B2,FUELSYSA_B2_SUP,FUELSYSA_B3,FUELSYSA_B3_SUP,FUELSYSA_B4,FUELSYSA_B4_SUP,FUELSYSB_B1,FUELSYSB_B1_SUP,FUELSYSB_B2,FUELSYSB_B2_SUP,FUELSYSB_B3,FUELSYSB_B3_SUP,FUELSYSB_B4,FUELSYSB_B4_SUP
   - 01A6:ODO
   - DB33.010D:VSS
-  - DB33.012F:FLI
+  - DB33.011C:OBDSUP
   - DB33.0131:CLR_DIST
   - DB33.0142:VPWR
-  - DB33.01A6:ODO
 unsupported_commands_by_ecu:
-  "DA0E":
-  - DA0E.222610
-  - DA0E.222611
-  - DA0E.222612
-  - DA0E.222662
-  - DA0E.22266D
-  "DA10":
-  - DA10.000010.222610
-  - DA10.222666
+  "720":
+  - 720.728.22404C
+  - 720.728.226185
+  - 720.728.2261A5
+  - 720.728.22DD01
+  "726":
+  - 726.22407E
+  - '726.227151'
+  - 726.22C150
+  - 726.22C154
+  - 726.22C259
+  - 726.72E.222813
+  - 726.72E.222814
+  - 726.72E.222815
+  - 726.72E.222816
+  - 726.72E.222817
+  - 726.72E.222818
+  - 726.72E.22DD01
+  "760":
+  - 760.222B00
+  - 760.768.223201
+  "764":
+  - 764.22A224
+  "7DF":
+  - 7DF.221310
+  - 7DF.221E12
+  - 7DF.221E1C
+  - 7DF.221E23
+  - 7DF.22F42F
+  - 7DF.22F45C
+  "7E0":
+  - 7E0.220301
+  - 7E0.220307
+  - 7E0.22030F
+  - 7E0.220316
+  - 7E0.220317
+  - 7E0.220318
+  - 7E0.220319
+  - 7E0.22031A
+  - 7E0.22031B
+  - 7E0.220324
+  - 7E0.22032B
+  - 7E0.220338
+  - 7E0.22033C
+  - 7E0.22033E
+  - 7E0.220353
+  - 7E0.22035A
+  - 7E0.22035F
+  - 7E0.22038E
+  - 7E0.22038F
+  - 7E0.220393
+  - 7E0.2203BA
+  - 7E0.2203BB
+  - 7E0.2203BC
+  - 7E0.2203BD
+  - 7E0.2203CA
+  - 7E0.2203DC
+  - 7E0.2203E8
+  - 7E0.7E8.221E12
+  - 7E0.7E8.221E1C
+  - 7E0.7E8.221E23
+  - 7E0.7E8.22DD01
+  - 7E0.7E8.22F42F
+  "7E2":
+  - 7E2.7EA.22DD04
+  - 7E2.7EA.22DD05
+  "7E4":
+  - 7E4.7EC.224800
+  - 7E4.7EC.224801
+  - 7E4.7EC.22480D
+  - 7E4.7EC.224810
+  - 7E4.7EC.224845
+  - 7E4.7EC.224848
+  - 7E4.7EC.22484F
+  - 7E4.7EC.22490C
+  "7E6":
+  - 7E6.7EE.221E1C
   "DA11":
   - DA11.11.222611:HONDA_AIRGAS_RATIO
   - DA11.11.222612:HONDA_VTEC_VALVE_CTRL
@@ -93,11 +160,3 @@ unsupported_commands_by_ecu:
   "DA1E":
   - DA1E.223083:HONDA_ATF
   - DA1E.223086:HONDA_GEAR_V2
-  "DA33":
-  - DA33.222201
-  - DA33.223083
-  "DA60":
-  - DA60.000060.227029
-  "DB33":
-  - DB33.222615
-  - DB33.223086
