--- a/tests/test_cases/2025/commands/DB33.010D.yaml
+++ b/tests/test_cases/2025/commands/DB33.010D.yaml
@@ -1,13 +1,29 @@
 command_id: DB33.010D
-can_id_format: TWENTY_NINE_BIT
-extended_addressing_enabled: false
 test_cases:
-- response: 18DAF11003410D00
-  expected_values:
+- expected_values:
     VSS: 0
-- response: 18DAF11003410D48
-  expected_values:
-    VSS: 72
-- response: 18DAF1EF03410D09
-  expected_values:
-    VSS: 9
+  response: 18DAF11003410D00
+- expected_values:
+    VSS: 0
+  response: 18DAF1EF03410D00
+- expected_values:
+    VSS: 0
+  response: |-
+    18DAF1EF03410D00
+    18DAF11003410D00
+    18DAF11E03410D00
+- expected_values:
+    VSS: 47
+  response: |-
+    18DAF1EF03410D2F
+    18DAF11003410D2F
+    18DAF11E03410D2F
+- expected_values:
+    VSS: 87
+  response: |-
+    18DAF1EF03410D57
+    18DAF11003410D58
+    18DAF11E03410D57
+- expected_values:
+    VSS: 113
+  response: 18DAF1EF03410D71
