--- a/tests/test_cases/2017/command_support.yaml
+++ b/tests/test_cases/2017/command_support.yaml
@@ -1,8 +1,22 @@
 model_year: 2017
-can_id_format: TWENTY_NINE_BIT
-extended_addressing_enabled: false
 supported_commands_by_ecu:
-  DB33:
+  "DA10":
+  - DA10.10.222610:HONDA_AC_CLUTCH,HONDA_GENERATOR
+  - DA10.10.222611:HONDA_AIRGAS_RATIO_V2
+  - DA10.10.222661:HONDA_FUELAIR_CAR
+  - DA10.10.222662:HONDA_KNOCK_CONTROL,HONDA_VTC_DUTY
+  - DA10.10.222663:HONDA_MIS_1,HONDA_MIS_2,HONDA_MIS_3,HONDA_MIS_4
+  - DA10.222615:HONDA_ACTIVE_CYL
+  - DA10.222660|fc=1:HONDA_ODO,HONDA_RUNTM
+  "DA1E":
+  - DA1E.223083:HONDA_ATF
+  - DA1E.223086:HONDA_GEAR_V2
+  "DA26":
+  - DA26.226001|fc=1:HONDA_TP_FL,HONDA_TP_FR,HONDA_TP_RL,HONDA_TP_RR
+  "DA60":
+  - DA60.227028|fc=1:HONDA_AAT
+  - DA60.60.227029:HONDA_FLV
+  "DB33":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0103:FUELSYS1,FUELSYS2
   - 0104:LOAD_PCT
@@ -20,11 +34,12 @@ supported_commands_by_ecu:
   - 0111:TP
   - 0113:O2S11_EXISTS,O2S12_EXISTS,O2S13_EXISTS,O2S14_EXISTS,O2S21_EXISTS,O2S22_EXISTS,O2S23_EXISTS,O2S24_EXISTS
   - 0115:O2S12,SHRTFT11
+  - 0119:O2S22,SHRTFT22
   - 011C:OBDSUP
   - 011F:RUNTM
   - 0121:MIL_DIST
   - 0123:FRP
-  - 0124:LAMBDA11_WIDE,O2S11_WIDE
+  - 0124:LAMBDA11_VOLT,O2S11_VOLT
   - 012C:EGR_PCT
   - 012D:EGR_ERR
   - 012E:EVAP_PCT
@@ -46,17 +61,65 @@ supported_commands_by_ecu:
   - 014C:TAC_PCT
   - 0151:FUEL_TYP
   - 019F:FUELSYSA_B1,FUELSYSA_B1_SUP,FUELSYSA_B2,FUELSYSA_B2_SUP,FUELSYSA_B3,FUELSYSA_B3_SUP,FUELSYSA_B4,FUELSYSA_B4_SUP,FUELSYSB_B1,FUELSYSB_B1_SUP,FUELSYSB_B2,FUELSYSB_B2_SUP,FUELSYSB_B3,FUELSYSB_B3_SUP,FUELSYSB_B4,FUELSYSB_B4_SUP
+  - DB33.0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
+  - DB33.0103:FUELSYS1,FUELSYS2
+  - DB33.0105:ECT
+  - DB33.010D:VSS
+  - DB33.011C:OBDSUP
+  - DB33.0121:MIL_DIST
+  - DB33.012F:FLI
+  - DB33.0130:WARM_UPS
+  - DB33.0131:CLR_DIST
+  - DB33.0142:VPWR
+  - DB33.019F:FUELSYSA_B1,FUELSYSA_B1_SUP,FUELSYSA_B2,FUELSYSA_B2_SUP,FUELSYSA_B3,FUELSYSA_B3_SUP,FUELSYSA_B4,FUELSYSA_B4_SUP,FUELSYSB_B1,FUELSYSB_B1_SUP,FUELSYSB_B2,FUELSYSB_B2_SUP,FUELSYSB_B3,FUELSYSB_B3_SUP,FUELSYSB_B4,FUELSYSB_B4_SUP
 unsupported_commands_by_ecu:
-  DA0E:
-  - DA0E.18DAF10E.222600
-  DA10:
-  - DA10.222660
-  DA1D:
-  - DA1D.222221
-  DA26:
-  - DA26.226001
-  DA60:
-  - DA60.227028
-  DB33:
-  - DB33.18DAF110.222600
-  - DB33.18DAF110.223000
+  "DA0E":
+  - DA0E.00000E.222611
+  - DA0E.00000E.22266D
+  - DA0E.222610
+  - DA0E.222611
+  - DA0E.222612
+  - DA0E.222662
+  - DA0E.22266D
+  "DA10":
+  - DA10.000010.222610
+  - DA10.000010.222611
+  - DA10.000010.222612
+  - DA10.000010.222661
+  - DA10.000010.222662
+  - DA10.000010.222663
+  - DA10.000010.222666
+  - DA10.222612
+  - DA10.222666
+  "DA11":
+  - DA11.000011.222611
+  - DA11.000011.222612
+  - DA11.000011.222660
+  - DA11.000011.222662
+  - DA11.000011.222666
+  - DA11.11.222611:HONDA_AIRGAS_RATIO
+  - DA11.11.222612:HONDA_VTEC_VALVE_CTRL
+  - DA11.11.222660:HONDA_RUNTM_V2
+  - DA11.11.222662:HONDA_CAT_T,HONDA_KNOCK_CTRL
+  - DA11.11.222666:HONDA_EOL,HONDA_EOT
+  - DA11.222663
+  - DA11.22266C
+  "DA1D":
+  - DA1D.00001D.222201
+  - DA1D.00001D.222660
+  - DA1D.1D.222201:HONDA_ATF_T
+  - DA1D.1D.222660:HONDA_ODO_V2
+  - DA1D.222203:HONDA_EOP
+  - DA1D.222221|fc=1:HONDA_GEAR
+  "DA1E":
+  - DA1E.222201
+  "DA33":
+  - DA33.222201
+  - DA33.223083
+  "DA60":
+  - DA60.000060.227029
+  "DB33":
+  - DB33.222301
+  - DB33.222615
+  - DB33.223083
+  - DB33.223086
