--- a/tests/test_cases/2017/commands/DB33.0105.yaml
+++ b/tests/test_cases/2017/commands/DB33.0105.yaml
@@ -1,20 +1,32 @@
 command_id: DB33.0105
-can_id_format: TWENTY_NINE_BIT
-extended_addressing_enabled: false
 test_cases:
-- response: |-
-    18DAF1100341054E
-    18DAF11E0341054D
-  expected_values:
-    ECT: 37
-- response: 18DAF11003410554
-  expected_values:
-    ECT: 44
-- response: |-
+- expected_values:
+    ECT: -40
+  response: 18DAF11003410500
+- expected_values:
+    ECT: 35
+  response: |-
+    18DAF1100341054B
+    18DAF11E0341054B
+- expected_values:
+    ECT: 85
+  response: |-
+    18DAF1100341057D
+    18DAF1262800000000555555
+    18DAF11E0341057D
+- expected_values:
+    ECT: 88
+  response: |-
     18DAF11003410580
     18DAF11E03410580
-  expected_values:
-    ECT: 88
-- response: 18DAF11003410584
-  expected_values:
-    ECT: 92
+- expected_values:
+    ECT: 90
+  response: |-
+    18DAF11003410582
+    18DAF11E03410582
+- expected_values:
+    ECT: 95
+  response: 18DAF11003410587
+- expected_values:
+    ECT: 87
+  response: 18DAF11E0341057F
