--- a/tests/test_cases/2025/commands/DB33.0131.yaml
+++ b/tests/test_cases/2025/commands/DB33.0131.yaml
@@ -1,22 +1,42 @@
 command_id: DB33.0131
-can_id_format: TWENTY_NINE_BIT
-extended_addressing_enabled: false
 test_cases:
-- response: 18DAF1100441311013
-  expected_values:
-    CLR_DIST: 4115
-- response: 18DAF1100441311014
-  expected_values:
-    CLR_DIST: 4116
-- response: 18DAF1100441311015
-  expected_values:
-    CLR_DIST: 4117
-- response: 18DAF11E0441311674
-  expected_values:
-    CLR_DIST: 5748
-- response: 18DAF11E0441311675
-  expected_values:
-    CLR_DIST: 5749
-- response: 18DAF11E0441311676
-  expected_values:
-    CLR_DIST: 5750
+- expected_values:
+    CLR_DIST: 4205
+  response: 18DAF110044131106D
+- expected_values:
+    CLR_DIST: 31103
+  response: |-
+    18DAF110044131106D
+    18DAF11E044131797F
+- expected_values:
+    CLR_DIST: 7826
+  response: |-
+    18DAF110044131126C
+    18DAF11E0441311E92
+- expected_values:
+    CLR_DIST: 4835
+  response: 18DAF11004413112E3
+- expected_values:
+    CLR_DIST: 7945
+  response: |-
+    18DAF11004413112E3
+    18DAF11E0441311F09
+- expected_values:
+    CLR_DIST: 7991
+  response: |-
+    18DAF1100441311311
+    18DAF11E0441311F37
+- expected_values:
+    CLR_DIST: 4882
+  response: 18DAF1100441311312
+- expected_values:
+    CLR_DIST: 8066
+  response: |-
+    18DAF110044131135B
+    18DAF11E0441311F82
+- expected_values:
+    CLR_DIST: 7837
+  response: 18DAF11E0441311E9D
+- expected_values:
+    CLR_DIST: 8039
+  response: 18DAF11E0441311F67
