Update command data for Honda/Pilot

--- a/tests/test_cases/2017/commands/DB33.0131.yaml
+++ b/tests/test_cases/2017/commands/DB33.0131.yaml
@@ -42,5 +42,10 @@ test_cases:
     18DAF1100441310E64
     18DAF11E0441310E60
 - expected_values:
+    CLR_DIST: 3786
+  response: |-
+    18DAF1100441310ECE
+    18DAF11E0441310ECA
+- expected_values:
     CLR_DIST: 0
   response: 18DAF11E0441310000
