--- a/tests/test_cases/2017/commands/DB33.0131.yaml
+++ b/tests/test_cases/2017/commands/DB33.0131.yaml
@@ -47,5 +47,11 @@ test_cases:
     18DAF1100441310ECE
     18DAF11E0441310ECA
 - expected_values:
+    CLR_DIST: 3873
+  response: |-
+    18DAF1100441310F25
+    18DAF11E0441310F21
+    18DAF1602500000000000000
+- expected_values:
     CLR_DIST: 0
   response: 18DAF11E0441310000
