--- a/tests/test_cases/2017/commands/DA1E.223086.yaml
+++ b/tests/test_cases/2017/commands/DA1E.223086.yaml
@@ -269,6 +269,16 @@ test_cases:
     18DAF11E24F0000101000000
     18DAF11E2500000000005555
 - expected_values:
+    HONDA_GEAR_V2: D1
+  response: |-
+    18DAF11E1027623086FFFFFF
+    18DAF11E210309B009B009B0
+    18DAF1602348000000000000
+    18DAF11E2209B009B001F401
+    18DAF11E230100010101F010
+    18DAF11E24F0100000000000
+    18DAF11E2500000000005555
+- expected_values:
     HONDA_GEAR_V2: D3
   response: |-
     18DAF11E1027623086FFFFFF
