--- a/tests/test_cases/2017/commands/DA26.226001|fc=1.yaml
+++ b/tests/test_cases/2017/commands/DA26.226001|fc=1.yaml
@@ -64,6 +64,23 @@ test_cases:
     18DAF1262800000000555555
 - expected_values:
     HONDA_TP_FL: 225
+    HONDA_TP_FR: 224
+    HONDA_TP_RL: 228
+    HONDA_TP_RR: 217
+  response: |-
+    18DAF126103B6260010000FF
+    18DAF1262100F000000000E0
+    18DAF1262200E100D900E400
+    18DAF1262300000000000000
+    18DAF1262424272126000000
+    18DAF1262500000000000000
+    18DAF1262600000000000000
+    18DAF1262700000000000000
+    18DAF1262800000000555555
+    18DAF1602800005555555555
+    18DAF16010396270298FFC00
+- expected_values:
+    HONDA_TP_FL: 225
     HONDA_TP_FR: 227
     HONDA_TP_RL: 227
     HONDA_TP_RR: 220
