--- a/tests/test_cases/2017/command_support.yaml
+++ b/tests/test_cases/2017/command_support.yaml
@@ -2,7 +2,7 @@ model_year: 2017
 supported_commands_by_ecu:
   "DA10":
   - DA10.10.222610:HONDA_AC_CLUTCH,HONDA_GENERATOR
-  - DA10.10.222611:HONDA_AIRGAS_RATIO_V2
+  - DA10.10.222611:HONDA_AIRGAS_RATIO
   - DA10.10.222661:HONDA_FUELAIR_CAR
   - DA10.10.222662:HONDA_KNOCK_CONTROL,HONDA_VTC_DUTY
   - DA10.10.222663:HONDA_MIS_1,HONDA_MIS_2,HONDA_MIS_3,HONDA_MIS_4
@@ -97,11 +97,10 @@ unsupported_commands_by_ecu:
   - DA11.000011.222660
   - DA11.000011.222662
   - DA11.000011.222666
-  - DA11.11.222611:HONDA_AIRGAS_RATIO
+  - DA11.11.222611:HONDA_AIRGAS_RATIO_V2
   - DA11.11.222612:HONDA_VTEC_VALVE_CTRL
   - DA11.11.222660:HONDA_RUNTM_V2
-  - DA11.11.222662:HONDA_CAT_T,HONDA_KNOCK_CTRL
-  - DA11.11.222666:HONDA_EOL,HONDA_EOT
+  - DA11.11.222662:HONDA_CAT_T,HONDA_KNOCK_CONTROL_V2
   - DA11.222663
   - DA11.22266C
   "DA1D":
@@ -109,7 +108,7 @@ unsupported_commands_by_ecu:
   - DA1D.00001D.222660
   - DA1D.1D.222201:HONDA_ATF_T
   - DA1D.1D.222660:HONDA_ODO_V2
-  - DA1D.222203:HONDA_EOP
+  - DA1D.222203
   - DA1D.222221|fc=1:HONDA_GEAR
   "DA1E":
   - DA1E.222201
