--- a/tests/test_cases/2017/commands/DB33.010D.yaml
+++ b/tests/test_cases/2017/commands/DB33.010D.yaml
@@ -19,6 +19,12 @@ test_cases:
     18DAF11003410D00
     18DAF11E03410D00
 - expected_values:
+    VSS: 48
+  response: |-
+    18DAF11003410D30
+    18DAF11E03410D30
+    18DAF1262800000000555555
+- expected_values:
     VSS: 85
   response: |-
     18DAF11003410D55
