--- a/tests/test_cases/2025/commands/DA10.10.222611.yaml
+++ b/tests/test_cases/2025/commands/DA10.10.222611.yaml
@@ -1,7 +1,7 @@
 command_id: DA10.10.222611
 test_cases:
 - expected_values:
-    HONDA_AIRGAS_RATIO_V2: 0
+    HONDA_AIRGAS_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -13,7 +13,7 @@ test_cases:
     18DAF1102700000000000000
     18DAF1102800005555555555
 - expected_values:
-    HONDA_AIRGAS_RATIO_V2: 0
+    HONDA_AIRGAS_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -25,7 +25,7 @@ test_cases:
     18DAF1102700000000000000
     18DAF1102800005555555555
 - expected_values:
-    HONDA_AIRGAS_RATIO_V2: 0
+    HONDA_AIRGAS_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -37,7 +37,7 @@ test_cases:
     18DAF1102700000000000000
     18DAF1102800005555555555
 - expected_values:
-    HONDA_AIRGAS_RATIO_V2: 0
+    HONDA_AIRGAS_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -49,7 +49,7 @@ test_cases:
     18DAF1102700000000000000
     18DAF1102800005555555555
 - expected_values:
-    HONDA_AIRGAS_RATIO_V2: 0
+    HONDA_AIRGAS_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -61,7 +61,7 @@ test_cases:
     18DAF1102700000000000000
     18DAF1102800005555555555
 - expected_values:
-    HONDA_AIRGAS_RATIO_V2: 0
+    HONDA_AIRGAS_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -73,7 +73,7 @@ test_cases:
     18DAF1102700000000000000
     18DAF1102800005555555555
 - expected_values:
-    HONDA_AIRGAS_RATIO_V2: 0
+    HONDA_AIRGAS_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -85,7 +85,7 @@ test_cases:
     18DAF1102700000000000000
     18DAF1102800005555555555
 - expected_values:
-    HONDA_AIRGAS_RATIO_V2: 0
+    HONDA_AIRGAS_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -97,7 +97,7 @@ test_cases:
     18DAF1102700000000000000
     18DAF1102800005555555555
 - expected_values:
-    HONDA_AIRGAS_RATIO_V2: 0
+    HONDA_AIRGAS_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -109,7 +109,19 @@ test_cases:
     18DAF1102700000000000000
     18DAF1102800005555555555
 - expected_values:
-    HONDA_AIRGAS_RATIO_V2: 0
+    HONDA_AIRGAS_RATIO: 0
+  response: |-
+    18DAF1101039622611000FFC
+    18DAF11021FFCC0000000000
+    18DAF1102200000000000000
+    18DAF11023007FB4732A8083
+    18DAF1102478F0062400007F
+    18DAF11025FF7FF3838078F0
+    18DAF11026022600003C3C00
+    18DAF1102700000000000000
+    18DAF1102800005555555555
+- expected_values:
+    HONDA_AIRGAS_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -121,7 +133,7 @@ test_cases:
     18DAF1102700000000000000
     18DAF1102800005555555555
 - expected_values:
-    HONDA_AIRGAS_RATIO_V2: 0
+    HONDA_AIRGAS_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -133,7 +145,7 @@ test_cases:
     18DAF1102700000000000000
     18DAF1102800005555555555
 - expected_values:
-    HONDA_AIRGAS_RATIO_V2: 0
+    HONDA_AIRGAS_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -145,7 +157,7 @@ test_cases:
     18DAF1102700000000000000
     18DAF1102800005555555555
 - expected_values:
-    HONDA_AIRGAS_RATIO_V2: 0
+    HONDA_AIRGAS_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -157,7 +169,7 @@ test_cases:
     18DAF1102700000000000000
     18DAF1102800005555555555
 - expected_values:
-    HONDA_AIRGAS_RATIO_V2: 0
+    HONDA_AIRGAS_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -169,7 +181,7 @@ test_cases:
     18DAF1102700000000000000
     18DAF1102800005555555555
 - expected_values:
-    HONDA_AIRGAS_RATIO_V2: 0
+    HONDA_AIRGAS_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -181,7 +193,7 @@ test_cases:
     18DAF1102700000000000000
     18DAF1102800005555555555
 - expected_values:
-    HONDA_AIRGAS_RATIO_V2: 0
+    HONDA_AIRGAS_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -193,7 +205,7 @@ test_cases:
     18DAF1102700000000000000
     18DAF1102800005555555555
 - expected_values:
-    HONDA_AIRGAS_RATIO_V2: 0
+    HONDA_AIRGAS_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -205,7 +217,7 @@ test_cases:
     18DAF1102700000000000000
     18DAF1102800005555555555
 - expected_values:
-    HONDA_AIRGAS_RATIO_V2: 0
+    HONDA_AIRGAS_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -217,7 +229,7 @@ test_cases:
     18DAF1102700000000000000
     18DAF1102800005555555555
 - expected_values:
-    HONDA_AIRGAS_RATIO_V2: 0
+    HONDA_AIRGAS_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -229,7 +241,7 @@ test_cases:
     18DAF1102700000000000000
     18DAF1102800005555555555
 - expected_values:
-    HONDA_AIRGAS_RATIO_V2: 0
+    HONDA_AIRGAS_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -241,7 +253,7 @@ test_cases:
     18DAF1102700000000000000
     18DAF1102800005555555555
 - expected_values:
-    HONDA_AIRGAS_RATIO_V2: 0
+    HONDA_AIRGAS_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -253,19 +265,7 @@ test_cases:
     18DAF1102700000000000000
     18DAF1102800005555555555
 - expected_values:
-    HONDA_AIRGAS_RATIO_V2: 0
-  response: |-
-    18DAF1101039622611000FFC
-    18DAF11021FFCC0000000000
-    18DAF1102200000000000000
-    18DAF11023007FFD7F957F87
-    18DAF110248033020700007F
-    18DAF11025FF7FF484858033
-    18DAF11026022800003C3C00
-    18DAF1102700000000000000
-    18DAF1102800005555555555
-- expected_values:
-    HONDA_AIRGAS_RATIO_V2: 0
+    HONDA_AIRGAS_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -277,7 +277,7 @@ test_cases:
     18DAF1102700000000000000
     18DAF1102800005555555555
 - expected_values:
-    HONDA_AIRGAS_RATIO_V2: 0
+    HONDA_AIRGAS_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -289,7 +289,7 @@ test_cases:
     18DAF1102700000000000000
     18DAF1102800005555555555
 - expected_values:
-    HONDA_AIRGAS_RATIO_V2: 0
+    HONDA_AIRGAS_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -301,7 +301,7 @@ test_cases:
     18DAF1102700000000000000
     18DAF1102800005555555555
 - expected_values:
-    HONDA_AIRGAS_RATIO_V2: 0
+    HONDA_AIRGAS_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -313,7 +313,7 @@ test_cases:
     18DAF1102700000000000000
     18DAF1102800005555555555
 - expected_values:
-    HONDA_AIRGAS_RATIO_V2: 0
+    HONDA_AIRGAS_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -325,7 +325,7 @@ test_cases:
     18DAF1102700000000000000
     18DAF1102800005555555555
 - expected_values:
-    HONDA_AIRGAS_RATIO_V2: 0
+    HONDA_AIRGAS_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -337,7 +337,7 @@ test_cases:
     18DAF1102700000000000000
     18DAF1102800005555555555
 - expected_values:
-    HONDA_AIRGAS_RATIO_V2: 0
+    HONDA_AIRGAS_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -349,7 +349,7 @@ test_cases:
     18DAF1102700000000000000
     18DAF1102800005555555555
 - expected_values:
-    HONDA_AIRGAS_RATIO_V2: 0
+    HONDA_AIRGAS_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
@@ -361,7 +361,7 @@ test_cases:
     18DAF1102700000000000000
     18DAF1102800005555555555
 - expected_values:
-    HONDA_AIRGAS_RATIO_V2: 0
+    HONDA_AIRGAS_RATIO: 0
   response: |-
     18DAF1101039622611000FFC
     18DAF11021FFCC0000000000
